# lib/db/src/schema/businesses.ts
@@ -1,0 +1,38 @@
+import {
+  pgTable,
+  text,
+  serial,
+  timestamp,
+  boolean,
+  integer,
+} from "drizzle-orm/pg-core";
+import { createInsertSchema } from "drizzle-zod";
+import { z } from "zod/v4";
+
+export const businessesTable = pgTable("businesses", {
+  id: serial("id").primaryKey(),
+  ownerId: integer("owner_id"),
+  name: text("name").notNull(),
+  category: text("category").notNull(),
+  description: text("description").notNull(),
+  location: text("location").notNull(),
+  phone: text("phone").notNull(),
+  logo: text("logo"),
+  images: text("images").array().notNull().default([]),
+  isVerified: boolean("is_verified").notNull().default(false),
+  createdAt: timestamp("created_at", { withTimezone: true })
+    .notNull()
+    .defaultNow(),
+  updatedAt: timestamp("updated_at", { withTimezone: true })
+    .notNull()
+    .defaultNow()
+    .$onUpdate(() => new Date()),
+});
+
+export const insertBusinessSchema = createInsertSchema(businessesTable).omit({
+  id: true,
+  createdAt: true,
+  updatedAt: true,
+});
+export type InsertBusiness = z.infer<typeof insertBusinessSchema>;
+export type Business = typeof businessesTable.$inferSelect;
